tests/sksl/errors/golden/PrivateTypes.glsl
### Compilation failed:

error: 2: type '$gsampler2D' is private
error: 9: type '$ivec' is private
error: 10: type '$genType' is private
error: 11: type 'S' is private
4 errors
